# pyutils

./: .gitignore  Jenkinsfile  Makefile  Pipfile  README.md  auto_click.py  check_dir_size.py  check_gitlab_health.py  check_json_urls.py  check_links.py  check_load.py  check_sites.py  check_swap.py  check_urls.py  clean_fs.py  config.yml  countdown.py  cpus.py  dates_example.py  db_info.py  dc.py  dga.py  dict_test.py  dir_compare.py  disk_info.py  disk_usage.py  elastic_health.py  empty_dirs.py  fizzbuzz.py  gen.py  github_status.py  hamming.py  hosts.txt  jinja2_test.py  json_urls.txt  list_history.py  list_hosts.py  list_lan_hosts.py  list_slack.py  load_info.py  (+45 more)
.circleci/: config.yml
.github/workflows/: python-package.yml
src/: arguments_example.py  battery-status.py  check-scripts.py  check_gitlab_health.py  check_json_urls.py  check_links.py  check_load.py  check_urls.py  countdown.py  db_info.py  dga.py  dict_test.py  dir_compare.py  fizzbuzz.py  jinja2_test.py  keywords.py  list_lan_hosts.py  logging_example.py  make_hosts.py  network_down.py  passwd.py  ps_info.py  quakes.py  read_csv.py  remove_vowels.py  snaps.py  strike.py  swap_info.py  template.py  test_port.py  threading_example.py  tickets.py  tidy_dir.py  timeme.py  timeout.py  utc2local.py
tests/: test_countdown.py  test_lookup.py  test_remove_vowels.py  test_sysinfo.py
