[tool.poetry]
name = "pyutils"
version = "0.1.0"
description = "Python utility scripts"
authors = ["Michael Madden <mikemadden42@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.1"
PyYAML = "^6.0"
boto = "^2.49.0"
boto3 = "^1.21.31"
nested_dict = "^1.61"
nose = "^1.3.7"
psutil = "^5.9.0"
pytest = "^8.1.1"
python-dateutil = "^2.8.2"
requests = "^2.27.1"
simplejson = "^3.17.6"
six = "^1.16.0"
slacker = "^0.14.0"
urllib3 = "^1.26.9"
black = "^24.3.0"
flake8 = "^7.0.0"
pylint = "^3.0.1"
pandas = "^2.0.1"
rich = "^13.3.5"
pytest-xdist = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # Pylint
    "PL"
]
ignore = [
    # tests use assert
    "S101"
]
