[project]
name = "pyutils"
version = "0.1.0"
description = "Python utility scripts"
requires-python = ">=3.13"
dependencies = [
    "boto>=2.49.0",
    "boto3>=1.42.3",
    "jinja2>=3.1.6",
    "nested-dict>=1.61",
    "nose>=1.3.7",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "simplejson>=3.20.2",
    "six>=1.17.0",
    "slacker>=0.14.0",
    "urllib3>=2.5.0",
]

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # Pylint
    "PL"
]
lint.ignore = [
    # tests use assert
    "S101"
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
